# roulette_simulator

./: .gitignore  Cargo.toml
res/: agents.json  game.json  test_agents.json
res/tst/: game.json
src/: error.rs  main.rs
src/agent/: agent.rs  agent_log.rs  mod.rs
src/api/: endpoints.rs
src/bet/: bet.rs  bet_log.rs  bet_state.rs  bet_value.rs  mod.rs
src/board/: board.rs  mod.rs  slot.rs
src/json/: deserializable.rs  json_reader.rs  mod.rs
src/json_reader/: json_reader.rs  mod.rs
src/roulette/: game_configs.rs  game_logs.rs  game_runner.rs  mod.rs  roulette_game.rs  roulette_type.rs  stats.rs
src/types/: adjacent_numbers.rs  color.rs  column.rs  double_column.rs  dozen.rs  even_odd.rs  from_slot_number.rs  half.rs  mod.rs  row.rs  slot_number.rs
