[package]
name = "roulette_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4"] }
regex = "1"
prettytable-rs = "0.10.0"
itertools = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features=["env-filter", "json"] }
tracing-appender = "0.2.2"
tracing-serde = "0.1.3"
async-std = "1.12.0"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
